# Claset-Cmd

./: .editorconfig  .gitignore  README.md  pyproject.toml
.github/workflows/: Build.yaml
ClasetCommandLine/: CmdMainClass.py  __debug_main__.py  __init__.py  __main__.py
ClasetCommandLine/Utils/: ArgumentParsers.py  I18n.py  __init__.py
Tools/: Black.ps1
Tools/Translations/: Merge.ps1
Translations/: .gitignore  ArchiveExclude.txt  template.pot  zh_CN.po
