[project]
name = "Claset-Cmd"
description = "基于 Python 的 Minecraft 启动管理器核心 Claset 的命令行前端"
authors = [
    {name = "Puqns67", email = "me@puqns67.icu"},
]
dependencies = [
    "Claset-Core @ git+https://github.com/Puqns67/Claset-Core.git@c616d08973f0578d66f8370b90469dae9cf4944c",
    "cmd2>=2.4.2",
    "rich>=12.5.1",
]
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
dynamic = ["version"]

[project.optional-dependencies]

[tool.pdm]
version = { source = "file", path = "ClasetCommandLine/__init__.py" }

[tool.pdm.dev-dependencies]
formatter = [
    "black>=22.8.0",
]
build = [
    "nuitka>=1.0.6",
    "ordered-set>=4.1.0",
]

[tool.black]
line-length = 95
target-version = ["py310"]
exclude = ["ArgumentParsers.py"]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
